tests/snapshots/yaml_suite_snapshots__yaml_suite_82AN_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Three dashes and content without space
  from: "@perlpunk"
  tags: scalar 1.3-err
  yaml: "---word1\nword2\n"
  tree: "+STR\n +DOC\n  =VAL :---word1 word2\n -DOC\n-STR\n"
  json: "\"---word1 word2\"\n"
  dump: "'---word1 word2'\n"
