tests/snapshots/yaml_suite_snapshots__yaml_suite_82AN_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "'---word1 word2'\n"
  from: "@perlpunk"
  json: "\"---word1 word2\"\n"
  name: Three dashes and content without space
  tags: scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL :---word1 word2\n -DOC\n-STR\n"
  yaml: "---word1\nword2\n"
