tests/snapshots/yaml_suite_snapshots__yaml_suite_87E4_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 7.8. Single Quoted Implicit Keys
  from: "http://www.yaml.org/spec/1.2/spec.html#id2788496"
  tags: spec flow sequence mapping
  yaml: "'implicit block key' : [\n  'implicit flow key' : value,\n ]\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL 'implicit block key\n   +SEQ []\n    +MAP {}\n     =VAL 'implicit flow key\n     =VAL :value\n    -MAP\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"implicit block key\": [\n    {\n      \"implicit flow key\": \"value\"\n    }\n  ]\n}\n"
  dump: "'implicit block key':\n- 'implicit flow key': value\n"
