tests/snapshots/yaml_suite_snapshots__yaml_suite_8CWC_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Plain mapping key ending with colon
  from: "@perlpunk"
  tags: mapping scalar
  yaml: "---\nkey ends with two colons::: value\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key ends with two colons::\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"key ends with two colons::\": \"value\"\n}\n"
  dump: "---\n'key ends with two colons::': value\n"
