tests/snapshots/yaml_suite_snapshots__yaml_suite_8CWC_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n'key ends with two colons::': value\n"
  from: "@perlpunk"
  json: "{\n  \"key ends with two colons::\": \"value\"\n}\n"
  name: Plain mapping key ending with colon
  tags: mapping scalar
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key ends with two colons::\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\nkey ends with two colons::: value\n"
