tests/snapshots/yaml_suite_snapshots__yaml_suite_8G76_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.10. Comment Lines
  from: "http://www.yaml.org/spec/1.2/spec.html#id2780544"
  tags: spec comment empty scalar whitespace
  yaml: "  # Comment\n␣␣␣\n↵\n↵\n"
  tree: "+STR\n-STR\n"
  json: ""
  dump: ""
