tests/snapshots/yaml_suite_snapshots__yaml_suite_8G76_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ""
  from: "http://www.yaml.org/spec/1.2/spec.html#id2780544"
  json: ""
  name: Spec Example 6.10. Comment Lines
  tags: spec comment empty scalar whitespace
  tree: "+STR\n-STR\n"
  yaml: "  # Comment\n␣␣␣\n↵\n↵\n"
